# cmake-play

./: .travis.yml  CMakeLists.txt  README.md  README.too
binaries/: changeMyKey.x86_64.dynamic.binary
